--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
         "types": "tsc --noEmit"
     },
     "devDependencies": {
-        "@eslint/js": "^9.19.0",
-        "@types/node": "^22.13.5",
-        "eslint": "^9.17.0",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-react": "^7.37.3",
-        "eslint-plugin-react-hooks": "^5.1.0",
-        "prettier": "^3.4.2",
+        "@eslint/js": "^9.21.0",
+        "@types/node": "^22.13.9",
+        "eslint": "^9.21.0",
+        "eslint-config-prettier": "^10.0.2",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "prettier": "^3.5.3",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "typescript-eslint": "^8.23.0"
+        "typescript-eslint": "^8.26.0"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
-        "@inertiajs/react": "^2.0.0",
+        "@inertiajs/react": "^2.0.4",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
@@ -38,17 +38,18 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
-        "@tailwindcss/vite": "^4.0.6",
-        "@types/react": "^19.0.3",
-        "@types/react-dom": "^19.0.2",
+        "@tailwindcss/vite": "^4.0.10",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
         "bootstrap": "^5.3.7",
+        "bootstrap-icons": "^1.13.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "concurrently": "^9.0.1",
-        "globals": "^15.14.0",
+        "concurrently": "^9.1.2",
+        "globals": "^15.15.0",
         "laravel-echo": "^2.1.6",
-        "laravel-vite-plugin": "^1.0",
+        "laravel-vite-plugin": "^1.2.0",
         "lucide-react": "^0.475.0",
         "pusher-js": "^8.4.0",
         "react": "^19.0.0",
@@ -59,11 +60,11 @@
         "react-select": "^5.10.2",
         "sweetalert2": "^11.22.2",
         "sweetalert2-react-content": "^5.1.0",
-        "tailwind-merge": "^3.0.1",
-        "tailwindcss": "^4.0.0",
+        "tailwind-merge": "^3.0.2",
+        "tailwindcss": "^4.0.10",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.7.2",
-        "vite": "^6.0"
+        "typescript": "^5.8.2",
+        "vite": "^6.2.0"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
