Add new user Guidance and Enhanced The Subject and Room Dynamic

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.6.3",
         "react-select": "^5.10.2",
+        "select2": "^4.1.0-rc.0",
         "sweetalert2": "^11.22.2",
         "sweetalert2-react-content": "^5.1.0",
         "tailwind-merge": "^3.0.2",
